--- a/istio/gateway.yaml
+++ b/istio/gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: ecommerce
 spec:
   selector:
-    istio: ingress
+    istio: ingressgateway
   servers:
   - port:
       number: 80
